--- a/index.html
+++ b/index.html
@@ -4,26 +4,19 @@
         <meta charset="utf-8">
 		<style>
 			body {
-				margin: 0px;
+				margin: 2px;
 			}
 			.image {
 				max-width: 300px;
 			}
 		</style>
 
-        <script src="exclude-dependent-search-pattern.js"></script>
     </head>
     <body>
 		<div class="cont">
-			<input type="file" accept="" class="addPhotoButton">
-			<div class="cont">
-				<img class="image" />
-			</div>
-			<div class="res">
-			</div>
+			<div class="res">	</div>
 		</div>
-
-	
+        <script src="exclude-dependent-search-pattern.js"></script>
     
     </body>
 </html>
