--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     </head>
     <body>
+    	<p>Given the list of search-patterns, exclude dependent patterns</p>
+    	<p>Example: given list ["aa-b", "a-b"], search-pattern "aa-b" should be excluded as dependent of "a-b" (if some string contains "aa-b", then it also contains "a-b")</p>
 		<div class="cont">
 			<div class="res">	</div>
 		</div>
